--- a/index.html
+++ b/index.html
@@ -1,53 +1,45 @@
-
 <html>
 <HEAD>
   <meta charset="utf-8"/>
 </HEAD>
 
-<body width=100%>
+<body>
 <title>Takashi KITAMURA</title>
 
 <b>Takashi KITAMURA</b> (Dr. Eng.) <br>
 
-<p>Senior Researcher</p>
+<p>Senior Researcher<br>
 
-<a href="http://www.itri.aist.go.jp/">Information Technology Research Institute (ITRI)</a><br>
 <a href="http://www.aist.go.jp/index_en.html">National Institute of Advanced Industrial Science and Technology (AIST)</a>
 <br>
-<br>
-
-t.kitamura@aist.go.jp<br>
-Midorigaoka 1-8-31, Ikeda, Osaka, 563-8577, Japan
-<br>
-Tel: +81-6-6494-8054 <br>
-Fax: +81-6-6494-8073 <br>
-
-
-
-<hr>
-<p><b>What's new <img src="new.gif">:</b>
-<ul>
-<li> Please submit your papers to <a href=http://www.ftscs.org//>FTSCS 2019</a>
-</ul>
+t.kitamura@aist.go.jp
 </p>
 
+<p>
+  <a href="https://orcid.org/0000-0002-8903-3161" target="_blank"> ORCID</a>
+  <a href="https://scholar.google.co.jp/citations?user=LMKCmzsAAAAJ&hl=en&citsig=AMstHGT8U3yGDz83xdhmR5qt7RHF_-H4BQ" target="_blank">Google Scholar</a>
+  <a href="https://researchmap.jp/tkitamura?lang=en" target="_blank">Researchmap</a>
+  <a href="https://dblp.org/pid/24/3893-1.html" target="_blank">DBLP</a>
+  </p>
+
 <hr>
-<p><b>Research interests:</b> Formal methods, Software testing, Requirements engineering, Software Engineering</p>
+<p><b>Research interests:</b> 
+  <ul>
+    <li>Software Testing</li>
+    <li>Formal Methods</li>
+    <li>Requirements Engineering</li>
+    <li>Algorithm Fairness</li>
+    <li>Software Engineering</li>
+  </ul>
 
-
-<p><b>I am/was responsible for the following grant projects:</b>
-<ul>
-<li>2017.04-2020.03: Principle Investigator, Kaken (Wakate-B), \4,030K
- <b>"Combinatorial testing in continuous development"</b>
-<li>2013.12-2016.11: Principle Investigator, JST A-STEP (High-risk challenge), \59,561K <b>"Enhancement, tool development, and empirical study of FOT"</b>
-<li>2011.12-2012.11: Co-investigator, JST A-STEP (Feasibility study), <b>"Feasibility study on scalability on a combinatorial testing technique"</b>
-<li>2010.12-2012.11: Co-investigator, Kaken (Kiban-C), <b>"Logics for formal methods and their first-order extentions"</b>
-</ul>
+<hr>
 </p>
 
 
-<p><b>Publications (selected):</b> (see also <a href="http://www.informatik.uni-trier.de/~ley/db/indices/a-tree/k/Kitamura:Takashi.html">DBLP</a>
-<a href="https://scholar.google.co.jp/citations?user=LMKCmzsAAAAJ&hl=en&citsig=AMstHGT8U3yGDz83xdhmR5qt7RHF_-H4BQ">Google Scholar</a>
+<p><b>Publications (selected):</b> (see also <a href="https://dblp.org/pid/24/3893-1.html" target="_blank">DBLP</a>
+<a href="https://scholar.google.co.jp/citations?user=LMKCmzsAAAAJ&hl=en&citsig=AMstHGT8U3yGDz83xdhmR5qt7RHF_-H4BQ" target="_blank">Google Scholar</a>
+<a href="https://researchmap.jp/tkitamura?lang=en" target="_blank">Researchmap</a>
+<a href="https://orcid.org/0000-0002-8903-3161" target="_blank"> ORCID</a>
 )
 
 <ol>
@@ -121,6 +113,18 @@ Akihisa Yamada and Takashi Kitamura, "<b>Towards Developing the Combinatorial Te
 </p>
 
 
+<p><b>Grant projects:</b>
+  <ul>
+  <li>2017.04-2020.03: Principle Investigator, Kaken (Wakate-B), \4,030K
+   <b>"Combinatorial testing in continuous development"</b>
+  <li>2013.12-2016.11: Principle Investigator, JST A-STEP (High-risk challenge), \59,561K <b>"Enhancement, tool development, and empirical study of FOT"</b>
+  <li>2011.12-2012.11: Co-investigator, JST A-STEP (Feasibility study), <b>"Feasibility study on scalability on a combinatorial testing technique"</b>
+  <li>2010.12-2012.11: Co-investigator, Kaken (Kiban-C), <b>"Logics for formal methods and their first-order extentions"</b>
+  </ul>
+  </p>
+  
+
+  
 
 <p><b>Employment:</b>
 <ul>
