--- a/index-.html
+++ b/index-.html
@@ -1,1 +1,260 @@
-Website of Takashi Kitamura
+<html>
+<HEAD>
+  <meta charset="utf-8"/>
+</HEAD>
+
+<body>
+<title>Takashi KITAMURA</title>
+
+<b>Takashi KITAMURA</b> (Dr. Eng.) <br>
+
+<p>Senior Researcher<br>
+
+<a href="http://www.aist.go.jp/index_en.html">National Institute of Advanced Industrial Science and Technology (AIST)</a>
+<br>
+t.kitamura@aist.go.jp
+</p>
+
+<p>
+  <a href="https://orcid.org/0000-0002-8903-3161" target="_blank"> ORCID</a>
+  <a href="https://scholar.google.co.jp/citations?user=LMKCmzsAAAAJ&hl=en&citsig=AMstHGT8U3yGDz83xdhmR5qt7RHF_-H4BQ" target="_blank">Google Scholar</a>
+  <a href="https://researchmap.jp/tkitamura?lang=en" target="_blank">Researchmap</a>
+  <a href="https://dblp.org/pid/24/3893-1.html" target="_blank">DBLP</a>
+  </p>
+
+<hr>
+<p><b>Research interests:</b>
+  <ul>
+    <li>Software Testing</li>
+    <li>Formal Methods</li>
+    <li>Requirements Engineering</li>
+    <li>Algorithm Fairness</li>
+    <li>Software Engineering</li>
+  </ul>
+
+<hr>
+</p>
+
+
+<p><b>Publications (selected):</b> (see also <a href="https://dblp.org/pid/24/3893-1.html" target="_blank">DBLP</a>
+<a href="https://scholar.google.co.jp/citations?user=LMKCmzsAAAAJ&hl=en&citsig=AMstHGT8U3yGDz83xdhmR5qt7RHF_-H4BQ" target="_blank">Google Scholar</a>
+<a href="https://researchmap.jp/tkitamura?lang=en" target="_blank">Researchmap</a>
+<a href="https://orcid.org/0000-0002-8903-3161" target="_blank"> ORCID</a>
+)
+
+<ol>
+  <li value="18">
+  Takashi Kitamura, Quentin Maissonneuve, Eun-Hye Choi, Cyrille Artho, Angelo Gargantini,<b> "Optimal Test Suite Generation for Modified Condition Decision Coverage Using SAT Solving."</b>.  in Proceedings of 37th International Conference of Computer Safety, Reliability, and Security (SAFECOMP 2018), pp. 123-138, Västerås, Sweden, September 19-21, 2018, Lecture Notes in Computer Science (LNCS) 11093, Springer 2018, ISBN 978-3-319-99129-0
+  [<a href="./dl/safecomp2018.pdf">preprint</a>]
+  <li value="17">
+  Hao Jin, Takashi Kitamura, Eun-Hye Choi, Tatsuhiro Tsuchiya, "A Satisfiability-Based Approach to Generation of Constrained Locating Arrays" IWCT 2018: 285-294
+<li value="16">
+Takashi Kitamura, Akihisa Yamada, Goro Hatayama, Shinya Sakuragi, Eun-Hye Choi, Cyrille Artho,<b> "Classification Tree Method with Parameter Shielding"</b>.  in Proceedings of 36th International Conference of Computer Safety, Reliability, and Security (SAFECOMP 2017), pp. 230-241, Trento, Italy, September 13-15, 2017, Lecture Notes in Computer Science (LNCS) 10488, Springer 2017, ISBN 978-3-319-66265-7
+[<a href="./dl/safecomp2017.pdf">preprint</a>]
+<li value="15">
+Cyrille Artho, Quentin Gros, Guillaume Rousset, Kazuaki Banzai, Lei Ma, Takashi Kitamura, Masami Hagiya, Yoshinori Tanabe, Mitsuharu Yamamoto: <b>"Model-Based API Testing of Apache ZooKeeper"</b>, in Proceedings of the 10th IEEE International Conference on Software Testing, Verification, and Validation (ICST2017), pp 288-298, IEEE CPS
+<li value="14">
+Akihisa Yamada, Armin Biere, Cyrille Artho, Takashi Kitamura, Eun-Hye Choi, <b>"Greedy combinatorial test case generation using unsatisfiable cores"</b>, in Proceedings of the 31st IEEE/ACM International Conference on Automated Software Engineering, (ASE 2016), pp. 614-624, 2016.
+[Benchmark:<a href="http://staff.aist.go.jp/t.kitamura/dl/Company_B.calot">Compnay_B</a>]
+<li value="13">
+Eun-Hye Choi, Cyrille Artho, Takashi Kitamura, Osamu Mizuno, Akihisa Yamada: <b> "Distance-Integrated Combinatorial Testing"</b> in Proceedings of 27th IEEE International Symposium on Software Reliability Engineering (ISSRE 2016), 93-104
+Ottawa, Canada, October 23-27, 2016. IEEE Computer Society 2016, ISBN 978-1-4673-9002-6
+<li value="12">
+Takashi Kitamura, Akihisa Yamada, Goro Hatayama, Cyrille Artho, Eun-Hye Choi,
+Ngoc Thi Bich Do, Yutaka Oiwa, Shinya Sakuragi, <b>"Combinatorial Testing for
+		Tree-structured Test Models with Constraints"</b>, in Proceedings of the 2015 IEEE International Conference on Software Quality, Reliability and Security (QRS2015), pp. 141-150
+IEEE CPS,  2015.  <font color="#ff0000"> Best Paper Award </font>
+[<a href="http://staff.aist.go.jp/t.kitamura/dl/QRS2015.pdf">preprint</a>]
+<li value="11">
+Eun-Hye Choi, Takashi Kitamura, Cyrille Artho, Akihisa Yamada, and Yutaka
+Oiwa, <b>"Priority Integration for Weighted Combinatorial Testing"</b>, in
+Proceedings of he 39th Annual International Computers, Software and
+Applications Conference (COMPSAC2015), IEEE CPS, pp. 242-247, 2015 [<a href="http://staff.aist.go.jp/t.kitamura/dl/COMPSAC2015.pdf">preprint</a>]
+</li>
+<li value="10">
+Akihisa Yamada, Takashi Kitamura, Cyrille Artho, Eun-Hye Choi, Yutaka Oiwa, Armin Biere, <b>"Optimization of Combinatorial Testing by
+Incremental SAT Solving"</b>, in Proceedings of the 8th IEEE International Conference on Software Testing, Verification, and Validation (ICST2015),
+IEEE CPS,  pp. 1-10, 2015
+[<a href="http://staff.aist.go.jp/t.kitamura/dl/ICST2015.pdf">preprint</a>]
+</li>
+<li value="9">
+Eun-Hye Choi, Takashi Kitamura, Cyrille Artho, and Yutaka Oiwa, <b>"Design of
+		Prioritized N-Wise Testing"</b>, in Proceedings of The 26th IFIP
+International Conference on Testing Software and Systems (ICTSS2014), Lecture
+Notes in Computer Science (LNCS), volume 8763, page. 186-191, Springer,
+Madrid, 2014. [<a href="./dl/ictss-2014.pdf">preprint</a>]
+</li>
+<li value="8"> Do Thi Bich Ngoc, Takashi Kitamura, Nguyen Van Tang, Goro Hatayama, Shinya Sakuragi and Hitoshi Ohsaki, <b>"Constructing Test Cases for N-wise Testing from Tree-based Test Models"</b>, in Proceedings of 4th International Symposium on Information and Communication Technology (SoICT2013), page. 275-284, ACM ICPS, ISBN:978-1-4503-2454-0, Danang, Vietnam, 2013.
+[<a href="http://staff.aist.go.jp/t.kitamura/dl/SOICT2013.pdf">preprint</a>]
+</li>
+<li value="7"> Takashi Kitamura and Keishi Okamoto, <b>"Automated route planning for milk-run transport logistics with the NuSMV model checker"</b>, IEICE Transactions Vol. E96-D, No.12, page. 2555-2564, Dec. 2013.
+[<a href="http://staff.aist.go.jp/t.kitamura/dl/IEICE_E96-D_12_2555.pdf">preprint</a>]
+</li>
+<li value="6"> Takashi Kitamura and Keishi Okamoto, <b>"Automated route planning for milk-run transport logistics using model checking"</b>, in Proceedings of 3rd International Conference on Networking and Computing (ICNC2012), page. 240-246, IEEE Computer Society Press, Okinawa, Japan, 2012, [<a href="http://staff.aist.go.jp/t.kitamura/dl/pdaa2012.pdf">preprint</a>]
+</li>
+<li value="5"> Takashi Kitamura, Ngoc Thi Bich Do, Hitoshi Ohsaki, Fang Ling, Shunsuke Yatabe <b>"Test-Case Design by Feature Trees"</b>, in Proceedings of 5th International Symposium On Leveraging Applications of Formal Methods, Verification and Validation (ISoLA2012), Lecture Notes in Computer Science (LNCS),  volume 7609, page. 458-473, Springer, 15-18 October 2012, Crete, 2012, [<a href="./dl/ISoLA2012-CR.pdf">preprint</a>]</li>
+<li value="4"> Takashi Kitamura, Keishi Okamoto, Makoto Takeyama, <b>"Formal Validation and Requirements Management Based on the Jackson's Reference Model for Requirements and Specifications"</b>, in Proceedings of the 16th IEEE Pacific Rim International Symposium on Dependable Computing (PRDC 2010), page. 251-252, IEEE Computer Society Press, Tokyo Japan, Dec 13-15, 2010
+<li value="3"> Takashi Kitamura and Huimin Lin, <b>"Specifying properties for Modular Pi-calculus"</b>, in Proceedings of 2nd IEEE International Symposium on Theoretical Aspects of Software Engineering (TASE'08),
+ Nanjing China, June 17-19 2008
+<li value="2"> Takashi Kitamura and Huimin Lin, <b>"Controlling process modularity in mobile computing"</b>,
+    in Proceedings of 4th International Colloquium on Theoretical Aspects of Computing (ICTAC 2007), Lecture Notes in Computer Science (LNCS), vol 1686, pp 246-259, Springer, September 2007
+<li value="1"> Takashi Kitamura and Atsushi Togashi. <b>"Relating Processes with Real-time Property''</b>, in Proceedings of Annual International Conference on Computer and Information Science (ICIS '02), Seoul, Korea, 2002
+</ol>
+
+
+<p><b>Publications in Japanese:</b>
+<ol>
+<li value="1">
+Akihisa Yamada and Takashi Kitamura, "<b>Towards Developing the Combinatorial Testing Tool Calot</b>"
+[<a href="http://staff.aist.go.jp/t.kitamura/dl/Towards_Developing_the_Combinatorial_Testing_Tool_Calot_2015.pdf">preprint</a>]
+</li>
+</ol>
+
+</p>
+
+
+<p><b>Grant projects:</b>
+  <ul>
+  <li>2017.04-2020.03: Principle Investigator, Kaken (Wakate-B), \4,030K
+   <b>"Combinatorial testing in continuous development"</b>
+  <li>2013.12-2016.11: Principle Investigator, JST A-STEP (High-risk challenge), \59,561K <b>"Enhancement, tool development, and empirical study of FOT"</b>
+  <li>2011.12-2012.11: Co-investigator, JST A-STEP (Feasibility study), <b>"Feasibility study on scalability on a combinatorial testing technique"</b>
+  <li>2010.12-2012.11: Co-investigator, Kaken (Kiban-C), <b>"Logics for formal methods and their first-order extentions"</b>
+  </ul>
+  </p>
+
+
+
+
+<p><b>Employment:</b>
+<ul>
+<li>2016.10-present: Senior researcher, AIST
+<li>2012.4-2016.9: Researcher, AIST
+<li>2008.9-2012.3: Post-doctoral researcher, AIST
+</ul>
+</p>
+
+<p><b>Education:</b>
+<ul>
+<li>2003-2008. Ph.D. <a href="http://english.is.cas.cn/">Institute of Software</a>, <a href="http://english.cas.cn/">Chinese Academy of Sciences</a>, Beijing, China. (Advisor <a href="http://lcs.ios.ac.cn/~lhm/">Prof. Huimin LIN</a>)
+<li>2001-2003. M.S. Information, <a href="http://www.shizuoka.ac.jp/english/">Shizuoka University</a>, Shizuoka, Japan. (Advisor <a href="http://www.myu.ac.jp/~togashi/">Prof. Atsushi TOGASHI</a>)
+<li>1997-2001. B.A. Information, <a href="http://www.shizuoka.ac.jp/english/">Shizuoka University</a>, Shizuoka, Japan.
+</ul>
+</p>
+
+<p><b>Academic activities (International):</b>
+  <ul>
+    2019
+  <ul>
+  <li>Program committee, <a href=http://www.ftscs.org/>7th International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2019)</a>
+  <li>Program committee, <a href=http://iwct2019.sba-research.org/>7th International Workshop on Combinatorial Testing (IWCT 2019)</a>
+  <li>Program committee, <a href=http://www2019.taicpart.org/>The 13th Workshop on
+  	Testing: Academia-Industry Collaboration, Practice and Research Techniques
+  	(TAIC PART 2019) </a>
+    <li>Program committee,  <a href=https://www.iaria.org/conferences2019/VALID19.html>IARIA The 10th International Conference on Advances in
+    System Testing and Validation Lifecycle (VALID 2019)</a>
+    </ul>
+  </ul>
+  <ul>
+    2018
+    <ul>
+      <li>Program committee, <a href=http://www.ftscs.org/>6th International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2018)</a>
+      <li>Program committee,  <a href=https://www.iaria.org/conferences2017/VALID17.html>IARIA The 10th International Conference on Advances in
+  System Testing and Validation Lifecycle (VALID 2018)</a>
+  <li>Program committee, <a href=http://paris.utdallas.edu/cta17/>IEEE International Workshop on Combinatorial Testing and its Applications (CTA 2018)</a>
+  <li>Program committee, <a href=http://iwct2018.sba-research.org/>7th International Workshop on Combinatorial Testing (IWCT 2018)</a>
+  <li>Program committee, <a href=http://www.computer.org/web/compsac2017>The
+  		42th IEEE Computer Society International Conference on Computers, Software
+  		& Applications (COMPSAC 2018)</a>
+  <li>Program committee, <a href=http://prdc.dependability.org/PRDC2018/>The 22nd IEEE Pacific Rim International Symposium on Dependable Computing (PRDC 2018)</a>
+  <li>Program chair, <a href=http://www2016.taicpart.org/>The 13th Workshop on
+  	Testing: Academia-Industry Collaboration, Practice and Research Techniques
+  	(TAIC PART 2018) </a>
+    </ul>
+  </ul>
+<ul>
+  2017
+  <ul>
+<li>Program committee,  <a href=https://www.iaria.org/conferences2017/VALID17.html>IARIA The Ninth International Conference on Advances in
+System Testing and Validation Lifecycle (VALID 2017)</a>
+<li>Program committee, <a href=http://paris.utdallas.edu/cta17/>IEEE International Workshop on Combinatorial Testing and its Applications (CTA 2017)</a>
+<li>Program committee, <a href=http://iwct2017.sba-research.org/>6th International Workshop on Combinatorial Testing (IWCT 2017)</a>
+<li>Program committee, <a href=http://www.computer.org/web/compsac2017>The
+		41th IEEE Computer Society International Conference on Computers, Software
+		& Applications (COMPSAC 2017)</a>
+<li>Program committee, <a href=http://prdc.dependability.org/PRDC2017/>The 21st IEEE Pacific Rim International Symposium on Dependable Computing (PRDC 2017)</a>
+<li>General chair, <a href=http://www2016.taicpart.org/>The 12th Workshop on
+	Testing: Academia-Industry Collaboration, Practice and Research Techniques
+	(TAIC PART 2017) </a>
+  </ul>
+</ul>
+<ul>
+  2016
+<ul>
+<li>Program committee, <a href=http://www.ftscs.org/>5th International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2016)</a>
+<li>Program chair, <a href=http://www2016.taicpart.org/>The 11th Workshop on
+	Testing: Academia-Industry Collaboration, Practice and Research Techniques
+	(TAIC PART 2016) </a>
+<li>Program committee, <a href=http://www.computer.org/web/compsac2016>The
+		40th IEEE Computer Society International Conference on Computers, Software
+		& Applications (COMPSAC 2016)</a>
+<li>Program committee,
+	<a href=http://www.itri.aist.go.jp/events/vst-2016-cfp.html>1st
+		International Workshop on Validating Software Tests (VST 2016)</a>
+</ul>
+</ul>
+<ul>
+  2015
+<ul>
+<li>Program committee, <a href=http://prdc.dependability.org/PRDC2015/>The 21st IEEE Pacific Rim International Symposium on Dependable Computing (PRDC 2015)</a>
+<li>Program committee, <a href=http://www.ftscs.org/>4th International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2015)</a>
+  </ul>
+  </ul>
+<ul>
+2014-2012
+<ul>
+<li>Program committee, <a href=http://www.ftscs.org/>3rd International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2014)</a>
+<li>Program committee, <a href=http://www.panda.sys.t.u-tokyo.ac.jp/kido/AAA2013/>1st International Workshop on Argument for Agreement and Assurance (AAA 2013)</a>
+<li>Program committee, <a href=http://www.ftscs.org/2013/>2nd International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2013)</a>
+<li>Publicity co-chair, <a href=http://www.jaist.ac.jp/icfem2012/>14th International Conference on Formal Engineering Methods (ICFEM 2012)</a>
+  <li>Program committee, <a href=http://www.ftscs12.org/>1st International Workshop on Formal Techniques for Safety-Critical Systems (FTSCS 2012)</a>
+  <li>External reviewer, <a href=http://hase2014.cis.fiu.edu/>15th IEEE International Symposium on High Assurance Systems Engineering. (HASE 2014)</a>
+<li>External reviewer, <a href=https://www.cs.auckland.ac.nz/research/conferences/icfem2013/>15th International Conference on Formal Engineering Methods (ICFEM 2013)</a>
+<li>External reviewer, <a href=http://www.it.abo.fi/iFM2013>10th International Conference on integrated Formal Methods (iFM 2013)</a>
+<li>External reviewer, <a href=http://www.jaist.ac.jp/icfem2012/>14th International Conference on Formal Engineering Methods (ICFEM 2012)</a>
+</ul>
+</ul>
+</p>
+
+<p><b>Academic activities (Domestic):</b>
+<ul>
+  <li>幹事, 2015.4 -- 2019.3, <a href=http://sigemb.jp/>情報処理学会組込みシステム研究会</a>
+  <li>編集委員,	2015--現在 <a href=http://www.ipsj.or.jp/english/jip/cfp/15-W.html>Journal of
+    		Information Processing (JIP), Special issue of "Embedded Systems
+    		Engineering"</a>
+  <li>プログラム委員, 2011-2016 <a href=http://www.sigemb.jp/ESS/2016/>Embedded System Symposium</a>
+</ul>
+</p>
+
+
+<p><b>Awards:</b>
+<ul>
+<li> IPSJ Yamashita SIG Research Award, 2011
+<li> <a href=https://staff.aist.go.jp/t.kitamura/QRS2015_award_certificate.pdf>Best Paper Award of QRS2015</a>, 2015
+</ul>
+</p>
+
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46128963-1', 'aist.go.jp');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
